--- a/Technical Documentation Page.css
+++ b/Technical Documentation Page.css
@@ -1,11 +1,38 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Open Sans', Arial, sans-serif;
     line-height: 1.5;
-    color: #4d4e53;
+    color: #f3f3f3;
+    background-color: #4d4e53;
 }
 
 * {
     box-sizing: border-box;
+}
+
+/* Scrollbar width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Scrollbar track */
+::-webkit-scrollbar-track {
+    /* background-color: rgb(172, 167, 167); */
+    background-color: #4d4e53;
+    border-radius: 5px;
+}
+
+/* Scrollbar handle */
+::-webkit-scrollbar-thumb {
+    background-color: #767780;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-corner{
+    color: red;
 }
 
 #navbar {
@@ -14,7 +41,8 @@ body {
     left: 0;
     width: 300px;
     height: 100%;
-    border-right: 3px solid rgba(0, 22, 22, 0.4);
+    /* background-image: linear-gradient(220deg, #F0DB4F, #522252) */
+    background-image: linear-gradient(220deg, rgba(196, 196, 196, 0.5), rgba(50, 51, 48, 0.5))
 }
 
 header {
@@ -73,14 +101,19 @@ header {
 
 .code-snippets {
     display: block;
-    font-family: monospace;
-    background-color: #f7f7f7;
+    background-color: #aaaaaa;
+    color: black;
+    border-radius: 5px;
     padding: 15px;
     margin: 10px;
     white-space: pre-line;
-    border-radius: 5px;
+    font-family: monospace;
     line-height: 2;
     text-align: left;
+}
+
+a {
+    color: #F0DB4F;
 }
 
 @media (max-width: 815px) {
@@ -90,11 +123,12 @@ header {
         width: 100%;
         max-height: 250px;
         border: none;
-        
+        background-image: none;
     }
     
     #navbar ul {
         border: 2px solid #4d4e53;
+        background-image: linear-gradient(180deg, rgba(196, 196, 196, 0.5), rgba(50, 51, 48, 0.5))
     }
 
     #main-doc {
